# kterm

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  deny.toml
.github/workflows/: license-check.yml  release.yml
assets/fonts/: D2Coding-LICENSE-NOTICE.txt
docs/: MPL-2.0_GUIDE.md  implementation_plan.md  kterm_architecture_overview.md  kterm_bug_resolution_report.md  kterm_walkthrough_final.md  new_implementation_plan.md  nla_credssp_implementation_plan.md  rdp_integration_plan.md  task.md  vnc_integration_plan.md
docs/license/: LICENSE-MIT
src/: main.rs  nectar_test.rs  ssh.rs  terminal.rs
src/app/: local_shell.rs  message.rs  mod.rs  model.rs  settings_persistence.rs  state.rs  subscription.rs  update.rs
src/connection/: mod.rs  rdp.rs  rdp_input_policy.rs  remote_input_policy.rs  serial.rs  ssh.rs  telnet.rs  vnc.rs
src/platform/: mod.rs  windows.rs
src/remote_display/: mod.rs  rdp_display.wgsl  remote_display.wgsl  renderer.rs
src/ui/: mod.rs  settings.rs  view.rs
