[package]
name = "kterm"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
egui = "0.33.3"
env_logger = "0.11.9"
iced = { version = "0.14.0", features = ["canvas", "image", "tokio", "advanced"] }
log = "0.4.29"
nectar = "0.4.0"
russh = { version = "0.58.0", features = ["async-trait"] }
russh-keys = "0.49.2"
serialport = "4.9.0"
tokio = { version = "1.50.0", features = ["full"] }
unicode-width = "0.2.2"
vte = "0.15.0"
async-trait = "0.1.86"
futures = "0.3.31"
