[package]
name = "kterm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.8.0"
env_logger = "0.11.9"
iced = { version = "0.14.0", features = ["canvas", "image", "tokio", "advanced", "wgpu"] }
log = "0.4.29"
nectar = "0.4.0"
russh = { version = "0.55.0", features = ["async-trait"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
russh-keys = "0.49.2"
tokio-serial = "5.4.4"
tokio = { version = "1.50.0", features = ["full"] }
unicode-width = "0.2.2"
vte = "0.15.0"
async-trait = "0.1.86"
futures = "0.3.31"
portable-pty = "0.9.0"
ironrdp = { version = "0.14.0", features = ["connector", "session", "graphics", "pdu", "cliprdr"] }
ironrdp-input = "0.5.0"
ironrdp-tokio = { version = "0.8.0", features = ["reqwest"] }
ironrdp-core = "0.1.5"
ironrdp-tls = { version = "0.2.0", features = ["rustls"] }
bytemuck = { version = "1.25", features = ["derive"] }
ironrdp-rdpsnd = "0.7.0"
ironrdp-rdpsnd-native = "0.5.0"
ironrdp-dvc = "0.5.0"
ironrdp-cliprdr = "0.5.0"
ironrdp-cliprdr-native = "0.5.0"
vnc-rs = "0.5.3"
